<resources>
    <string name="app_name">Beer Sommelier</string>

    <string name="loading">Loading</string>
    <string name="tagline">Tag: %s</string>
    <string name="search_hint">Beer Name</string>
    <string name="no_results">No results...</string>
    <string name="unknown">\?</string>
    <string name="retry">Retry</string>
    <string name="title_activity_beer_detail">Beer Detail</string>
    <string name="action_settings">Settings</string>

    <!-- Beer Detail Strings -->
    <string name="beer_description">Description</string>
    <string name="beer_name">Name</string>
    <string name="beer_tagline">Tag</string>
    <string name="beer_first_brewed">First Brewed</string>
    <string name="beer_abv">Alcohol by Volume</string>
    <string name="beer_ibu">IBU (Bitterness)</string>
    <string name="beer_gravity">Gravity</string>
    <string name="beer_ebc">EBC (Colour)</string>
    <string name="beer_srm">SRM (Colour)</string>
    <string name="beer_ph">PH</string>
    <string name="beer_attenuation_lev">Attenuation Level</string>
    <string name="beer_volume">Volume</string>
    <string name="beer_boil_volume">Boil Volume</string>
    <string name="beer_method">Method</string>
    <string name="beer_mash_temperatures">Mash Temperatures</string>
    <string name="duration">Duration</string>
    <string name="fermentation_temp">Fermentation Temp.</string>
    <string name="yeast">Yeast</string>
    <string name="twist">Twist</string>
    <string name="malt">Malts</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="temperature">Temperature</string>
    <string name="hop">Hops</string>
    <string name="food_pairing">Food Pairings</string>
    <string name="tips">Brewer Tips</string>
    <string name="filter">Filter</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="malt_name">Used Malt</string>
    <string name="apply">Apply</string>
    <string name="malt_hint">Malt</string>
    <string name="hops">Hop</string>

</resources>